# numerical_pde_sfa2025

./: README.md
code_files/: optimization.ipynb  optimization.py  sakuraFDM_explained.ipynb
code_files/.ipynb_checkpoints/: crash_visualizer-checkpoint.ipynb  optimization-checkpoint.py  sakuraFDM-checkpoint.py
code_files/cpp_implementation/: CMakeLists.txt
code_files/cpp_implementation/data/: delta_analytic.csv  delta_cheb.csv  delta_fd.csv  gamma_analytic.csv  gamma_cheb.csv  gamma_cn.csv  output_analytic.csv  output_cheb.csv  output_fd.csv
code_files/cpp_implementation/include/: analytic.hpp  chebyshev.hpp  config.hpp  solver.hpp  utils.hpp
code_files/cpp_implementation/plots/: visualize.ipynb
code_files/cpp_implementation/plots/.ipynb_checkpoints/: visualize-checkpoint.ipynb
code_files/cpp_implementation/src/: analytic.cpp  chebyshev.cpp  main.cpp  solver.cpp  utils.cpp
